new file:   downloads/blocky_photo_studio_1k.exr 	new file:   downloads/blue_photo_studio_1k.exr 	new file:   downloads/brown_photostudio_01_1k.exr 	new file:   downloads/brown_photostudio_02_1k.exr 	new file:   downloads/brown_photostudio_03_1k.exr 	new file:   downloads/brown_photostudio_06_1k.exr 	new file:   downloads/christmas_photo_studio_01_1k.exr 	new file:   downloads/studio_small_05_1k.exr 	modified:   src/__pycache__/flowLayout.cpython-37.pyc 	modified:   src/__pycache__/main.cpython-37.pyc 	new file:   src/__pycache__/worker.cpython-37.pyc 	modified:   src/main.py 	modified:   src/ui/mainUI.ui 	modified:   src/worker.py

--- a/src/ui/mainUI.ui
+++ b/src/ui/mainUI.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>793</width>
-    <height>590</height>
+    <width>853</width>
+    <height>607</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -15,7 +15,7 @@
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="0" column="0">
-    <layout class="QVBoxLayout" name="verticalLayout">
+    <layout class="QVBoxLayout" name="verticalLayout_2">
      <item>
       <widget class="QLabel" name="assetBrowserName">
        <property name="font">
@@ -38,28 +38,182 @@
       </widget>
      </item>
      <item>
-      <widget class="QScrollArea" name="ContantArea">
-       <property name="widgetResizable">
-        <bool>true</bool>
+      <widget class="Line" name="line">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
        </property>
-       <widget class="QWidget" name="scrollAreaWidgetContents">
-        <property name="geometry">
-         <rect>
-          <x>0</x>
-          <y>0</y>
-          <width>767</width>
-          <height>486</height>
-         </rect>
+      </widget>
+     </item>
+     <item>
+      <layout class="QHBoxLayout" name="horizontalLayout_2">
+       <item>
+        <widget class="QComboBox" name="comboBox_3">
+         <property name="font">
+          <font>
+           <family>Roboto</family>
+           <pointsize>12</pointsize>
+           <weight>75</weight>
+           <bold>true</bold>
+          </font>
+         </property>
+         <item>
+          <property name="text">
+           <string>HDRIs</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>3d Models</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>Textures</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>Way Of Vex &amp; Vop</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>Nodes Snap Shot</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>Setting</string>
+          </property>
+         </item>
+        </widget>
+       </item>
+       <item>
+        <spacer name="horizontalSpacer">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>40</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item>
+        <widget class="QComboBox" name="comboBox_4">
+         <item>
+          <property name="text">
+           <string>catagories</string>
+          </property>
+         </item>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLineEdit" name="lineEdit">
+         <property name="text">
+          <string>Search</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QComboBox" name="comboBox">
+         <item>
+          <property name="text">
+           <string>1k</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>2k</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>4k</string>
+          </property>
+         </item>
+        </widget>
+       </item>
+       <item>
+        <widget class="QComboBox" name="comboBox_2">
+         <item>
+          <property name="text">
+           <string>exr</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>hdr</string>
+          </property>
+         </item>
+        </widget>
+       </item>
+      </layout>
+     </item>
+    </layout>
+   </item>
+   <item row="1" column="0">
+    <layout class="QVBoxLayout" name="verticalLayout" stretch="15,1">
+     <property name="spacing">
+      <number>1</number>
+     </property>
+     <item>
+      <widget class="QSplitter" name="scrollAreaSplitter">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <widget class="QScrollArea" name="ContantArea">
+        <property name="widgetResizable">
+         <bool>true</bool>
         </property>
+        <widget class="QWidget" name="scrollAreaWidgetContents">
+         <property name="geometry">
+          <rect>
+           <x>0</x>
+           <y>0</y>
+           <width>477</width>
+           <height>453</height>
+          </rect>
+         </property>
+        </widget>
+       </widget>
+       <widget class="QScrollArea" name="scrollArea">
+        <property name="widgetResizable">
+         <bool>true</bool>
+        </property>
+        <widget class="QWidget" name="scrollAreaWidgetContents_3">
+         <property name="geometry">
+          <rect>
+           <x>0</x>
+           <y>0</y>
+           <width>342</width>
+           <height>453</height>
+          </rect>
+         </property>
+        </widget>
        </widget>
       </widget>
      </item>
      <item>
-      <layout class="QHBoxLayout" name="horizontalLayout">
+      <layout class="QHBoxLayout" name="horizontalLayout" stretch="2,1,0">
+       <property name="spacing">
+        <number>1</number>
+       </property>
+       <property name="sizeConstraint">
+        <enum>QLayout::SetDefaultConstraint</enum>
+       </property>
        <item>
         <widget class="QLabel" name="statusBar">
          <property name="sizePolicy">
-          <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+          <sizepolicy hsizetype="Preferred" vsizetype="Ignored">
            <horstretch>0</horstretch>
            <verstretch>0</verstretch>
           </sizepolicy>
@@ -77,7 +231,7 @@
        <item>
         <widget class="QProgressBar" name="progressBar">
          <property name="sizePolicy">
-          <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+          <sizepolicy hsizetype="Preferred" vsizetype="Ignored">
            <horstretch>0</horstretch>
            <verstretch>0</verstretch>
           </sizepolicy>
@@ -95,6 +249,28 @@
          </property>
          <property name="alignment">
           <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+         </property>
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QSlider" name="iconSize">
+         <property name="minimum">
+          <number>50</number>
+         </property>
+         <property name="maximum">
+          <number>500</number>
+         </property>
+         <property name="singleStep">
+          <number>20</number>
+         </property>
+         <property name="value">
+          <number>180</number>
+         </property>
+         <property name="sliderPosition">
+          <number>180</number>
          </property>
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
