--- a/src/ui/mainUI.ui
+++ b/src/ui/mainUI.ui
@@ -167,6 +167,15 @@
          </item>
         </widget>
        </item>
+       <item>
+        <widget class="QComboBox" name="assetType">
+         <item>
+          <property name="text">
+           <string>Type</string>
+          </property>
+         </item>
+        </widget>
+       </item>
       </layout>
      </item>
     </layout>
@@ -199,8 +208,8 @@
           <rect>
            <x>0</x>
            <y>0</y>
-           <width>410</width>
-           <height>453</height>
+           <width>416</width>
+           <height>494</height>
           </rect>
          </property>
         </widget>
@@ -214,8 +223,8 @@
           <rect>
            <x>0</x>
            <y>0</y>
-           <width>409</width>
-           <height>453</height>
+           <width>416</width>
+           <height>494</height>
           </rect>
          </property>
         </widget>
